load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "close.go",
        "create.go",
        "root.go",
        "sync.go",
        "update.go",
    ],
    importpath = "kubevirt.io/project-infra/robots/pkg/flake-issues-syncer/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
