load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["flake.go"],
    importpath = "kubevirt.io/project-infra/robots/pkg/flake-issues-syncer/flake",
    visibility = ["//visibility:public"],
    deps = ["//robots/pkg/flakefinder:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["flake_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["//robots/pkg/flakefinder:go_default_library"],
)
