load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "get.go",
        "jobs.go",
    ],
    importpath = "kubevirt.io/project-infra/robots/pkg/kubevirt/cmd/get",
    visibility = ["//visibility:public"],
    deps = [
        "//robots/pkg/kubevirt/prowjobconfigs:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_thediveo_enumflag//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["jobs_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
